# zarrify

./: .gitignore  pyproject.toml
src/zarrify/: __init__.py  to_zarr.py
src/zarrify/formats/: mrc.py  n5.py  tiff.py  tiff_stack.py
src/zarrify/utils/: dask_utils.py  volume.py
